Login Test and Search Test